将提交按钮改为居中，并确认可以用npm run执行简化命令（npm run start 可以简写为npm start

--- a/static/index.css
+++ b/static/index.css
@@ -92,6 +92,12 @@ button {
     color: #fff;
     border: none;
     cursor: pointer;
+    text-align: center;
+}
+
+button.commit {
+    display: block;
+    margin: 0 auto;
 }
 
 button:hover {
