重新按照Pages的文件结构重构了后端代码，并简化了接口。现在只提供/replies和/posts接口，所有参数都写在query params里面。推测之前的405错误是因为后端错误使用了workers的export default{async fetch(){...}}逻辑而不是pages function需要的onRequest{method}。若确实如此则该bug应当被修复，但目前的实际测试并未显示修复

--- a/static/index.css
+++ b/static/index.css
@@ -81,7 +81,11 @@ textarea {
     border-radius: 4px;
 }
 
-label {
+textarea[id="postContent"] {
+    height: 8em;
+}
+
+textarea label {
     display: block;
     margin: 10px 0 5px;
 }
